--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <footer class="bg-[#659f8f] dark:bg-[#313131]">
+        <!-- grid section -->
         <div class="container">
             <footer class="bg-[#659f8f] dark:bg-[#313131]">
                 <div class="container px-6 py-12 mx-auto">
-                    <div class="grid">
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                        <!-- newsletter section -->
                         <div class="sm:col-span-2">
-                            <h1 class="max-w-lg" >Subscribe.</h1>
+                            <h1 class="max-w-lg text-[#313131] text-lg font-medium mb-4" >Subscribe to our newsletter</h1>
                             <div class="flex">
                                 <input id="email" type="text">
                                 <button class="w-full px-6 py-2.5 bg-white">
@@ -22,6 +24,7 @@
                                 </button>
                             </div>
                         </div>
+                        <!-- text section -->
                         <div>
                             <p class="text-[#313131]">Quick Link</p>
                             <div class="flex">
