--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-[#313131] text-lg font-medium mb-4" >Subscribe to our newsletter</h1>
                             <div class="flex">
-                                <input id="email" type="text">
-                                <button class="w-full px-6 py-2.5 bg-white">
+                                <input id="email" type="text" placeholder="email address" class= "flex-1 px-4 py-2 rounded-l-md text-gray-700 focus:outline-none">     
+                                <button class="px-6 py-2 bg-[#d86943] text-white rounded-r-md hover:bg-[#c55a36] transition-colors">
                                     Subscribe
                                 </button>
                             </div>
