--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                         <!-- text section -->
                         <div>
                             <p class="text-[#313131]">Quick Link</p>
-                            <div class="flex">
-                                <a href="#">Home</a>
-                                <a href="#">Who We Are</a>
-                                <a href="#">Our Philosophy</a>
+                            <div class="flex flex-col space-y-2">
+                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">Home</a>
+                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">Who We Are</a>
+                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">Our Philosophy</a>
                             </div>
                         </div>
                         <div>
                             <p class="text-[#313131]">Technologies</p>
-                            <div class="">
+                            <div class="flex flex-col space-y-2">
                                 <a href="#">HTML</a>
                                 <a href="#">CSS</a>
                                 <a href="#">JavaScript</a>
