changed spacing of grid  and newsletter sections

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <footer class="bg-[#659f8f] dark:bg-[#313131]">
         <!-- grid section -->
-        <div class="container">
+        <div class="container container px-6 py-12 mx-auto max-w-6xl">
             <footer class="bg-[#659f8f] dark:bg-[#313131]">
                 <div class="container px-6 py-12 mx-auto">
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                         <!-- newsletter section -->
-                        <div class="sm:col-span-2">
+                        <div class="md:col-span-1">
                             <h1 class="max-w-lg text-[#313131] text-lg font-medium mb-4" >Subscribe to our newsletter</h1>
                             <div class="flex">
                                 <input id="email" type="text" placeholder="email address" class= "flex-1 px-4 py-2 rounded-l-md text-gray-700 focus:outline-none">     
@@ -26,7 +26,7 @@
                         </div>
                         <!-- text section -->
                         <div>
-                            <p class="text-[#313131]">Quick Link</p>
+                            <p class="text-[#313131]  text-lg font-medium mb-4">Quick Link</p>
                             <div class="flex flex-col space-y-2">
                                 <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">Home</a>
                                 <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">Who We Are</a>
@@ -34,18 +34,18 @@
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Technologies</p>
+                            <p class="text-[#313131] text-lg font-medium mb-4">Technologies</p>
                             <div class="flex flex-col space-y-2">
-                                <a href="#">HTML</a>
-                                <a href="#">CSS</a>
-                                <a href="#">JavaScript</a>
+                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">HTML</a>
+                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">CSS</a>
+                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">JavaScript</a>
                             </div>
                         </div>
                     </div>
                     
                     <hr class="my-6 border-[#d86943]">
-                    
-                    <div class="flex">
+
+                    <div class="flex justify-start">
                         <a href="#">
                             <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
                         </a>
