--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <footer class="bg-[#659f8f] dark:bg-[#313131]">
         <!-- grid section -->
-        <div class="container container px-6 py-12 mx-auto max-w-6xl">
+        <div class="container px-6 py-12 mx-auto px-4 sm:px-6 lg:px-8 py-8 sm:py-12 mx-auto max-w-7xl">
             <footer class="bg-[#659f8f] dark:bg-[#313131]">
                 <div class="container px-6 py-12 mx-auto">
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-8">
                         <!-- newsletter section -->
                         <div class="md:col-span-1">
                             <h1 class="max-w-lg text-[#313131] text-lg font-medium mb-4" >Subscribe to our newsletter</h1>
