added urls to links aswell as various edits to text section

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
                     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-8">
                         <!-- newsletter section -->
                         <div class="md:col-span-1">
-                            <h1 class="max-w-lg text-[#313131] text-lg font-medium mb-4" >Subscribe to our newsletter</h1>
-                            <div class="flex">
-                                <input id="email" type="text" placeholder="email address" class= "flex-1 px-4 py-2 rounded-l-md text-gray-700 focus:outline-none">     
-                                <button class="px-6 py-2 bg-[#d86943] text-white rounded-r-md hover:bg-[#c55a36] transition-colors">
+                            <h1 class="max-w-lg text-[#313131] text-base sm:text-lg font-medium mb-3 sm:mb-4">Subscribe to our newsletter for updates</h1>
+                            <div class="flex flex-col sm:flex-row gap-2 sm:gap-3">
+                                <input id="email" type="text" placeholder="email address" class="flex-1 px-3 sm:px-4 py-2 sm:py-3 rounded-t-md sm:rounded-l-md sm:rounded-t-none text-gray-700 focus:outline-none text-sm sm:text-base ">     
+                                <button class="px-4 sm:px-6 py-2 sm:py-3 bg-[#d86943] text-white rounded-b-md sm:rounded-r-md sm:rounded-b-none hover:bg-[#c55a36] transition-colors text-sm sm:text-base font-medium">
                                     Subscribe
                                 </button>
                             </div>
                         </div>
                         <!-- text section -->
                         <div>
-                            <p class="text-[#313131]  text-lg font-medium mb-4">Quick Link</p>
+                            <p class="text-[#313131] text-base sm:text-lg font-medium mb-3 sm:mb-4">Quick Link</p>
                             <div class="flex flex-col space-y-2">
-                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">Home</a>
-                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">Who We Are</a>
-                                <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">Our Philosophy</a>
+                                <a href="https://www.codespace.co.za/" class="text-[#313131] hover:text-[#d86943] transition-colors">Home</a>
+                                <a href="https://www.codespace.co.za/" class="text-[#313131] hover:text-[#d86943] transition-colors">Who We Are</a>
+                                <a href="https://www.codespace.co.za/" class="text-[#313131] hover:text-[#d86943] transition-colors">Our Philosophy</a>
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131] text-lg font-medium mb-4">Technologies</p>
+                            <p class="text-[#313131] text-base sm:text-lg font-medium mb-3 sm:mb-4">Technologies</p>
                             <div class="flex flex-col space-y-2">
                                 <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">HTML</a>
                                 <a href="#" class="text-[#313131] hover:text-[#d86943] transition-colors">CSS</a>
@@ -42,10 +42,10 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <hr class="my-6 border-[#d86943]">
 
-                    <div class="flex justify-start">
+                    <hr class="my-6 sm:my-8 border-[#d86943]">
+
+                    <div class="flex justify-center sm:justify-start">
                         <a href="#">
                             <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
                         </a>
