--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                         <div class="md:col-span-1">
                             <h1 class="max-w-lg text-[#313131] text-base sm:text-lg font-medium mb-3 sm:mb-4">Subscribe to our newsletter for updates</h1>
                             <div class="flex flex-col sm:flex-row gap-2 sm:gap-3">
-                                <input id="email" type="text" placeholder="email address" class="flex-1 px-3 sm:px-4 py-2 sm:py-3 rounded-t-md sm:rounded-l-md sm:rounded-t-none text-gray-700 focus:outline-none text-sm sm:text-base ">     
-                                <button class="px-4 sm:px-6 py-2 sm:py-3 bg-[#d86943] text-white rounded-b-md sm:rounded-r-md sm:rounded-b-none hover:bg-[#c55a36] transition-colors text-sm sm:text-base font-medium">
+                                <input id="email" type="text" placeholder="email address" class="flex-1 px-3 sm:px-4 py-2 sm:py-3 rounded-md text-gray-700 focus:outline-none text-sm sm:text-base ">     
+                                <button class="px-4 sm:px-6 py-2 sm:py-3 bg-[#d86943] text-white rounded-b-md hover:bg-[#c55a36] transition-colors text-sm sm:text-base font-medium">
                                     Subscribe
                                 </button>
                             </div>
